# pytorch_learn_01

./: .gitignore  main.py  pyproject.toml
Deep-Learning-with-PyTorch/: py_torch_01.ipynb
pytorch_01/: 01-Basic.ipynb  01.ipynb  02-Tensors.ipynb  02.html  02.ipynb  03-Datasets & DataLoaders.ipynb  04-Transforms.ipynb  05-BuildNeuralNetwork.ipynb  06-Automatic Differentiation.ipynb  model.pth  numpy_01.ipynb
towhee_test/: 02.html  02.ipynb  main.py  pyproject.toml  trans.ipynb
